--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -1,38 +1,23 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-color: grey;
+  color: "black";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row{
+  display:flex;
+  flex-direction:'row';
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-direction: 'row';
+  width: 100px;
+  height: 100px;
+  border: 5px solid #000;
+  background-color: pink;
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
 }
