--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -12,11 +12,11 @@
 
 .box {
   display: flex;
-  flex-direction: 'row';
+  flex-direction: 'row';  
   width: 100px;
   height: 100px;
   border: 5px solid #000;
-  background-color: pink;
+  background-color: white;
   padding: 10px;
   margin: 5px;
   text-align: center;
