--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -9,14 +9,13 @@
 
 .row{
   display:flex;
-  flex-direction:'row';
+  justify-content: center;
 }
 
 .box {
-  display: flex;
-  flex-direction: 'row';  
-  width: 100px;
-  height: 100px;
+  display: flex; 
+  width: 50px;
+  height: 50px;
   background-color: white;
   border: 5px solid #000;
   padding: 10px;
