--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -3,8 +3,40 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  background: linear-gradient(to right, blue 50%, yellow 50%);
+  background: linear-gradient(to right, #4269f5 50%, #C2B280 50%);
   color: "black";
+  animation: bg-animation 5s infinite alternate;
+  transition: background 2s; 
+}
+
+
+.App:hover {
+  background: #4269f5;
+}
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: #3586ff;
+  overflow: hidden;
+}
+
+section .wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url(wave.png);
+  background-size: 1000px 100px;
+}
+
+section .wave.wave1{
+  animation: animate 30s linear infinite;
+  z-index: 1000;
+  opacity: 1;
+  animation-delay
 }
 
 .row{
