--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -7,7 +7,14 @@
   display:flex;
   justify-content: center;
 }
-
+.App{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  user-select: none;
+}
 
 html, body { height: 100%; }
 body {
