added img to header

--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -8,6 +8,25 @@
   justify-content: center;
 }
 
+header {
+  position: relative;
+}
+
+h1 {
+  position: relative;
+  z-index: 1;
+}
+
+.App img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  z-index: 0;
+}
+
 /* https://makeschool.org/mediabook/oa/tutorials/react-fundamentals-vm0/build-a-header-component/ */
 .Title {
 box-sizing: border-box;
@@ -17,10 +36,12 @@ justify-content: center;
 align-items: baseline;
 padding: 1em;
 margin-bottom: 2em;
-background-color: #003c00;
-color: #fff;
-font-family: "Cabin", Times, serif;
+background-color: #D3D3D3;
+color: #73be73;
+font-family: "Cabin", Times, sans-serif;
 }
+
+
 
 html, body { height: 100%; }
 body {
