--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -12,31 +12,20 @@ header {
   position: relative;
 }
 
-h1 {
-  position: relative;
-  z-index: 1;
-}
 
-.App img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  z-index: 0;
-}
+
+
 
 /* https://makeschool.org/mediabook/oa/tutorials/react-fundamentals-vm0/build-a-header-component/ */
 .Title {
+font-size: 100px;
 box-sizing: border-box;
 width: 100%;
 display: flex;
 justify-content: center;
 align-items: baseline;
-padding: 1em;
-margin-bottom: 2em;
-background-color: #D3D3D3;
+padding: 1px;
+margin-bottom: 2px;
 color: #73be73;
 font-family: "Cabin", Times, sans-serif;
 }
