--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -27,6 +27,7 @@ header {
 /* https://makeschool.org/mediabook/oa/tutorials/react-fundamentals-vm0/build-a-header-component/ */
 .Title {
 font-size: 100px;
+
 box-sizing: border-box;
 width: 100%;
 display: flex;
@@ -34,7 +35,7 @@ justify-content: center;
 align-items: baseline;
 padding: 1px;
 margin-bottom: 2px;
-color: #73be73;
+color: #006400;
 font-family: "Cabin", Times, sans-serif;
 }
 
@@ -93,3 +94,4 @@ body {
     transform: translate3d(0,5px,0);
   }
 }
+
