--- a/turtle/src/App.css
+++ b/turtle/src/App.css
@@ -46,6 +46,16 @@ body {
   background: radial-gradient(ellipse at center, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #C2B280 100%);
   overflow: hidden;
 }
+
+.rain:before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: white;
+  animation: lighting 4s linear infinite;
+  opacity:0;
+}
 .ocean {
   height: 5%;
   width: 100%;
@@ -61,23 +71,33 @@ body {
   width: 6400px;
   height: 198px;
   animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+  -webkit-animation: action 1s infinite  alternate;
+    animation: action 1s infinite  alternate;
   transform: translate3d(0,0,0);
+  
 }
 .wave:nth-of-type(2){
   top: -175px;
   animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
+  -webkit-animation: action 1s infinite  alternate;
+    animation: action 1s infinite  alternate;
   opacity: 1;
 }
 .wave:nth-of-type(3){
   top: -150px;
   animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.25s infinite, swell 7s ease -2.5s infinite;
+  -webkit-animation: action 1s infinite  alternate;
+    animation: action 1s infinite  alternate;
   opacity: 0.7;
 }
 .wave:nth-of-type(4){
   top: -150px;
   animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.5s infinite, swell 7s ease -5s infinite;
+  -webkit-animation: action 1s infinite  alternate;
+    animation: action 1s infinite  alternate;
   opacity: 0.3;
 }
+
 @keyframes wave {
   0%{
     margin-left: 0;
@@ -93,5 +113,50 @@ body {
   50%{
     transform: translate3d(0,5px,0);
   }
+  
+}
+@-webkit-keyframes action {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-100px); }
 }
 
+@keyframes action {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-100px); }
+}
+
+@keyframes lighting{
+  0%
+  {
+    opacity: 0;
+  }
+  10%
+  {
+    opacity: 0;
+  }
+  11%
+  {
+    opacity: 1;
+  }
+  14%
+  {
+    opacity: 0;
+  }
+  20%
+  {
+    opacity: 0;
+  }
+  21%
+  {
+    opacity: 1;
+  }
+  24%
+  {
+    opacity: 0;
+  }
+  104%
+  {
+    opacity: 0;
+  }
+
+}
